    mentioned, you should not use the new parameter but strive for zero alerts which
    is easily possible on RHEL based systems using existing parameters in this toolkilt.
    If the new parameter is used you must provide N reson text entries to match the
    expected N alert counts which will be made available as a link from the index

-------------------------------------------------------------------------------------
Noteable changes implemented between version 0.12 and version 0.13 are
IMPORTANT: backward compatibility for crontab checks made by collector versions
           prior to 0.13 is not provided. You must use the latest collector on
           all servers.
-------------------------------------------------------------------------------------
(1) *important* changes in crontab handling have been made, if you upgrade to
    processing version 0.13 you must use data collection files collected by
    version 0.13; I chose not to provide backward compability for the cron 
    section of the report. The effect of using an old version of the collector
    is that no crontab entries will be reported on when processed
(2) Not using at.allow/at.deny on the server will now alert
(3) Allow suppression of suid file alerts for the files installed as snap packages
    on Ubuntu that come bundled with thier own copy of system files

-------------------------------------------------------------------------------------
Noteable changes implemented between version 0.11 and version 0.12 are
-------------------------------------------------------------------------------------
(1) If both netfilter and iptables are in use raise a warning (in 0.11 was an alert)
(2) New customfile parm REFRESH_INTERVAL_EXPECTED=nn which is an enhancement to
    change '2' for version 0.11 so custom files can override the default of 14 days
    being used to mark a servers collected data as obsolete. As each server can now